--- a/css/styles.css
+++ b/css/styles.css
@@ -171,12 +171,21 @@ p {
 
 /*#endregion main section*/
 /* #region describe*/
+.descr {
+    padding: 120px 0;
+}
+.describe-list {
+    display: flex;
+    gap: 24px;
+}
+
 .describe-title {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: #2e2f42
+    color: #2e2f42;
+    padding-bottom: 8px;
 }
 
 .describe-p {
