--- a/css/styles.css
+++ b/css/styles.css
@@ -185,7 +185,7 @@ p {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    padding-bottom: 8px;
+    margin-bottom: 8px;
 }
 
 .describe-p {
