--- a/css/styles.css
+++ b/css/styles.css
@@ -23,9 +23,9 @@ ul,ol {
     padding-left: 0;
 }
 
-
 img {
-    display: block;}
+    display: block;
+}
 
 .visually-hidden {
     position: absolute;
@@ -279,12 +279,35 @@ gap: 24px;
 
 /* #endregion team*/
 /* #region our portfolio*/
+.products {
+    padding: 120px 0;
+}
+.class-title {
+    margin-bottom: 72px;
+}
+.products-list {
+    display:flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+.element {
+    width: calc((100% - 48px) /3);
+}
+
+.products-name {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
+
 .element-name {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px;
 }
 
 .element-describe {
@@ -305,7 +328,7 @@ gap: 24px;
 .logo-studio-footer {
     color: #f4f4fd
 }
-.logo-web, .logo-studio-footer {
+.logo-web{
     margin-bottom: 16 px;
 }
 
