--- a/css/styles.css
+++ b/css/styles.css
@@ -320,8 +320,6 @@ gap: 24px;
 /* #region footer */
 .footer-page {
     background-color: #2e2f42;
-}
-.footer-page section {
     padding: 100px 0;
 }
 
@@ -329,7 +327,8 @@ gap: 24px;
     color: #f4f4fd
 }
 .logo-web{
-    margin-bottom: 16 px;
+    margin-bottom: 16px;
+    display: inline-block;
 }
 
 .footer-p {
@@ -337,5 +336,6 @@ gap: 24px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
+    max-width: 264px;
 }
 /* #endregion footer */
