--- a/css/styles.css
+++ b/css/styles.css
@@ -18,13 +18,13 @@ p, h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
 
+img {
+    display: block;
+}
+
 ul,ol {
     margin: 0;
     padding-left: 0;
-}
-
-img {
-    display: block;
 }
 
 .visually-hidden {
@@ -213,7 +213,7 @@ p {
 
 /* #endregion desribe*/
 /* #region team */
-.team-main section {
+.main-team-section {
     padding: 120px 0;
 }
 
